Исправлены классы ActivityAnalysisRunner, UserAction